Updated POM with new dependencies from dependabot. Removed code which generated deprecation warnings.